--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -21,7 +21,7 @@ redirect_from:
 <p>I absolutely love dancing! 🕺💃 It's my favorite way to express myself. And what's even more exciting for me is engaging in dance communication or dance exchange with others. I find it fascinating to share, learn, and grow together in this beautiful art form.</p>
 
 <video width="240" height="320" controls>
-  <source src="https://github.com/Youhe-Jiang/youhe-jiang.github.io/blob/master/_pages/%E5%8F%8B%E5%92%8C%202023-06-06%2021.48.54.mp4?raw=true" type="video/mp4">
+  <source src="https://github.com/01Yan/hyyan.github.io/raw/master/_pages/" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
