--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -18,10 +18,10 @@ redirect_from:
   {% include archive-single.html %}
 {% endfor %}
 
-<p>I absolutely love dancing! 🕺💃 It's my favorite way to express myself. And what's even more exciting for me is engaging in dance communication or dance exchange with others. I find it fascinating to share, learn, and grow together in this beautiful art form.</p>
+<p>I have a great passion for travel and exploring nature🌃. I’ve visited 19 countries so far, immersing myself in different cultures and experiencing unforgettable moments like glacier trekking🧊🏔️. These experiences have broadened my horizons and helped me gain a clearer sense of my inner thoughts and desires.</p>
 
 <video width="240" height="320" controls>
-  <source src="https://github.com/01Yan/hyyan.github.io/raw/master/_pages/" type="video/mp4">
+  <source src="https://github.com/01Yan/hyyan.github.io/raw/master/_pages/289_1733753167.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
