--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -27,9 +27,9 @@ Your browser does not support the video tag.
 
 <br>
 
-<p>That's not all - I'm also a big fan of exercise! 🏋️‍♂️🤸‍♀️ Keeping active and staying fit is a part of my daily routine. It not only makes me feel good physically, but also boosts my mood and energy levels.</p>
+<p>I'm also a big fan of exercise! I have received professional table tennis training🏓️ and am also interested in fitness and surfing🏄‍♀️. These activities not only make me stronger, but also give me a more positive attitude in life and work.</p>
 
 <video width="240" height="320" controls>
-  <source src="https://github.com/Youhe-Jiang/youhe-jiang.github.io/blob/master/_pages/%E5%8F%8B%E5%92%8C%202023-06-06%2023.23.08.mp4?raw=true" type="video/mp4">
+  <source src="https://github.com/01Yan/hyyan.github.io/raw/master/_pages/290_1733753170.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
