--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -34,6 +34,11 @@ Your browser does not support the video tag.
 Your browser does not support the video tag.
 </video>
 
-<p>We presented the posters of our graduation projects to students and professors on the campus of Heriot-Watt. It was an exciting experience!<p>
-![image](https://github.com/01Yan/hyyan.github.io/raw/master/images/hw_post1.jpg)
-![image](https://github.com/01Yan/hyyan.github.io/raw/master/images/hw_post2.jpg)
+<br>
+
+<p>I presented the posters of my graduation project to students and professors on the campus of Heriot-Watt. It was an exciting experience!<p>
+<div style="display: flex; gap: 10px;">
+  <img src="https://github.com/01Yan/hyyan.github.io/raw/master/images/hw_post1.jpg" alt="Image 1" width="300" height="200">
+  <img src="https://github.com/01Yan/hyyan.github.io/raw/master/images/hw_post2.jpg" alt="Image 2" width="300" height="200">
+</div>
+
