--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -29,7 +29,7 @@ Your browser does not support the video tag.
 
 <p>I'm also a big fan of exercise! I have received professional table tennis training🏓️ and am also interested in fitness and surfing🏄‍♀️. These activities not only make me stronger, but also give me a more positive attitude in life and work.</p>
 
-<video width="260" height="350" controls>
+<video width="260" height="350" controls style="margin-top: -10px;">
   <source src="https://github.com/01Yan/hyyan.github.io/raw/master/_pages/290_1733753170.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
