--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -18,8 +18,8 @@ redirect_from:
   {% include archive-single.html %}
 {% endfor %}
 
-<p>I have a great passion for travel and exploring nature🌃. I’ve visited 19 countries so far, immersing myself in different cultures and experiencing unforgettable moments like glacier trekking🧊🏔️. These experiences have broadened my horizons and helped me gain a clearer sense of my inner thoughts and desires.</p>
-<p>I enjoy capturing those beautiful moments through photos.: <a href="https://github.com/01Yan/hyyan.github.io/raw/master/files/moments.pdf" target="_blank">View PDF</a></p>
+<p>I have a great passion for travel and exploring nature🌃. I’ve visited 19 countries so far, immersing myself in different cultures and experiencing unforgettable moments like glacier trekking🧊🏔️. These experiences have broadened my horizons and helped me gain a clearer sense of my inner thoughts and desires. And I enjoy capturing those beautiful moments through photos: <a href="https://github.com/01Yan/hyyan.github.io/raw/master/files/moments.pdf" target="_blank">Travel Moments</a></p>
+
 <video width="240" height="320" controls>
   <source src="https://github.com/01Yan/hyyan.github.io/raw/master/_pages/289_1733753167.mp4" type="video/mp4">
 Your browser does not support the video tag.
